CucumberC++/GherkinParser/gherkin.y/gherkin.output
Terminals unused in grammar

   INITIAL
   YYEOF_TOKEN


Grammar

    0 $accept: Feature $end

    1 Feature: Feature_Header Background Scenario_Definition

    2 Feature_Header: LanguageTag Tags FEATURE_LINE Description

    3 LanguageTag: /* empty */
    4            | LANGUAGE

    5 Tags: /* empty */
    6     | Tags TAG_LINE

    7 Description: /* empty */
    8            | DECRIPTION

    9 Background: /* empty */
   10           | BACKGROUND_LINE Description StepSeq

   11 Scenario_Definition: Scenario_List

   12 Scenario_List: Basic_Scenario
   13              | Scenario_List Basic_Scenario

   14 Basic_Scenario: Scenario
   15               | ScenarioOutline

   16 Scenario: Tags SCENARIO_LINE Description StepSeq

   17 StepSeq: Step
   18        | StepSeq Step

   19 Step: GIVEN_STEP StepParam
   20     | WHEN_STEP StepParam
   21     | THEN_STEP StepParam
   22     | AND_STEP StepParam
   23     | BUT_STEP StepParam

   24 StepParam: /* empty */
   25          | DOC_STRING
   26          | TableRows

   27 TableRows: TABLE_ROW
   28          | TableRows TABLE_ROW

   29 ScenarioOutline: Tags SCENARIO_OUTLINE_LINE Description StepSeq ExampleList

   30 ExampleList: Example
   31            | ExampleList Example

   32 Example: EXAMPLE_LINE TableRows


Terminals, with rules where they appear

$end (0) 0
error (256)
INITIAL (258)
LANGUAGE (259) 4
TAG_LINE (260) 6
FEATURE_LINE (261) 2
BACKGROUND_LINE (262) 10
SCENARIO_LINE (263) 16
SCENARIO_OUTLINE_LINE (264) 29
EXAMPLE_LINE (265) 32
DECRIPTION (266) 8
GIVEN_STEP (267) 19
WHEN_STEP (268) 20
THEN_STEP (269) 21
AND_STEP (270) 22
BUT_STEP (271) 23
DOC_STRING (272) 25
TABLE_ROW (273) 27 28
YYEOF_TOKEN (274)


Nonterminals, with rules where they appear

$accept (20)
    on left: 0
Feature (21)
    on left: 1, on right: 0
Feature_Header (22)
    on left: 2, on right: 1
LanguageTag (23)
    on left: 3 4, on right: 2
Tags (24)
    on left: 5 6, on right: 2 6 16 29
Description (25)
    on left: 7 8, on right: 2 10 16 29
Background (26)
    on left: 9 10, on right: 1
Scenario_Definition (27)
    on left: 11, on right: 1
Scenario_List (28)
    on left: 12 13, on right: 11 13
Basic_Scenario (29)
    on left: 14 15, on right: 12 13
Scenario (30)
    on left: 16, on right: 14
StepSeq (31)
    on left: 17 18, on right: 10 16 18 29
Step (32)
    on left: 19 20 21 22 23, on right: 17 18
StepParam (33)
    on left: 24 25 26, on right: 19 20 21 22 23
TableRows (34)
    on left: 27 28, on right: 26 28 32
ScenarioOutline (35)
    on left: 29, on right: 15
ExampleList (36)
    on left: 30 31, on right: 29 31
Example (37)
    on left: 32, on right: 30 31


State 0

    0 $accept: . Feature $end

    LANGUAGE  shift, and go to state 1

    $default  reduce using rule 3 (LanguageTag)

    Feature         go to state 2
    Feature_Header  go to state 3
    LanguageTag     go to state 4


State 1

    4 LanguageTag: LANGUAGE .

    $default  reduce using rule 4 (LanguageTag)


State 2

    0 $accept: Feature . $end

    $end  shift, and go to state 5


State 3

    1 Feature: Feature_Header . Background Scenario_Definition

    BACKGROUND_LINE  shift, and go to state 6

    $default  reduce using rule 9 (Background)

    Background  go to state 7


State 4

    2 Feature_Header: LanguageTag . Tags FEATURE_LINE Description

    $default  reduce using rule 5 (Tags)

    Tags  go to state 8


State 5

    0 $accept: Feature $end .

    $default  accept


State 6

   10 Background: BACKGROUND_LINE . Description StepSeq

    DECRIPTION  shift, and go to state 9

    $default  reduce using rule 7 (Description)

    Description  go to state 10


State 7

    1 Feature: Feature_Header Background . Scenario_Definition

    $default  reduce using rule 5 (Tags)

    Tags                 go to state 11
    Scenario_Definition  go to state 12
    Scenario_List        go to state 13
    Basic_Scenario       go to state 14
    Scenario             go to state 15
    ScenarioOutline      go to state 16


State 8

    2 Feature_Header: LanguageTag Tags . FEATURE_LINE Description
    6 Tags: Tags . TAG_LINE

    TAG_LINE      shift, and go to state 17
    FEATURE_LINE  shift, and go to state 18


State 9

    8 Description: DECRIPTION .

    $default  reduce using rule 8 (Description)


State 10

   10 Background: BACKGROUND_LINE Description . StepSeq

    GIVEN_STEP  shift, and go to state 19
    WHEN_STEP   shift, and go to state 20
    THEN_STEP   shift, and go to state 21
    AND_STEP    shift, and go to state 22
    BUT_STEP    shift, and go to state 23

    StepSeq  go to state 24
    Step     go to state 25


State 11

    6 Tags: Tags . TAG_LINE
   16 Scenario: Tags . SCENARIO_LINE Description StepSeq
   29 ScenarioOutline: Tags . SCENARIO_OUTLINE_LINE Description StepSeq ExampleList

    TAG_LINE               shift, and go to state 17
    SCENARIO_LINE          shift, and go to state 26
    SCENARIO_OUTLINE_LINE  shift, and go to state 27


State 12

    1 Feature: Feature_Header Background Scenario_Definition .

    $default  reduce using rule 1 (Feature)


State 13

   11 Scenario_Definition: Scenario_List .
   13 Scenario_List: Scenario_List . Basic_Scenario

    $end      reduce using rule 11 (Scenario_Definition)
    $default  reduce using rule 5 (Tags)

    Tags             go to state 11
    Basic_Scenario   go to state 28
    Scenario         go to state 15
    ScenarioOutline  go to state 16


State 14

   12 Scenario_List: Basic_Scenario .

    $default  reduce using rule 12 (Scenario_List)


State 15

   14 Basic_Scenario: Scenario .

    $default  reduce using rule 14 (Basic_Scenario)


State 16

   15 Basic_Scenario: ScenarioOutline .

    $default  reduce using rule 15 (Basic_Scenario)


State 17

    6 Tags: Tags TAG_LINE .

    $default  reduce using rule 6 (Tags)


State 18

    2 Feature_Header: LanguageTag Tags FEATURE_LINE . Description

    DECRIPTION  shift, and go to state 9

    $default  reduce using rule 7 (Description)

    Description  go to state 29


State 19

   19 Step: GIVEN_STEP . StepParam

    DOC_STRING  shift, and go to state 30
    TABLE_ROW   shift, and go to state 31

    $default  reduce using rule 24 (StepParam)

    StepParam  go to state 32
    TableRows  go to state 33


State 20

   20 Step: WHEN_STEP . StepParam

    DOC_STRING  shift, and go to state 30
    TABLE_ROW   shift, and go to state 31

    $default  reduce using rule 24 (StepParam)

    StepParam  go to state 34
    TableRows  go to state 33


State 21

   21 Step: THEN_STEP . StepParam

    DOC_STRING  shift, and go to state 30
    TABLE_ROW   shift, and go to state 31

    $default  reduce using rule 24 (StepParam)

    StepParam  go to state 35
    TableRows  go to state 33


State 22

   22 Step: AND_STEP . StepParam

    DOC_STRING  shift, and go to state 30
    TABLE_ROW   shift, and go to state 31

    $default  reduce using rule 24 (StepParam)

    StepParam  go to state 36
    TableRows  go to state 33


State 23

   23 Step: BUT_STEP . StepParam

    DOC_STRING  shift, and go to state 30
    TABLE_ROW   shift, and go to state 31

    $default  reduce using rule 24 (StepParam)

    StepParam  go to state 37
    TableRows  go to state 33


State 24

   10 Background: BACKGROUND_LINE Description StepSeq .
   18 StepSeq: StepSeq . Step

    GIVEN_STEP  shift, and go to state 19
    WHEN_STEP   shift, and go to state 20
    THEN_STEP   shift, and go to state 21
    AND_STEP    shift, and go to state 22
    BUT_STEP    shift, and go to state 23

    $default  reduce using rule 10 (Background)

    Step  go to state 38


State 25

   17 StepSeq: Step .

    $default  reduce using rule 17 (StepSeq)


State 26

   16 Scenario: Tags SCENARIO_LINE . Description StepSeq

    DECRIPTION  shift, and go to state 9

    $default  reduce using rule 7 (Description)

    Description  go to state 39


State 27

   29 ScenarioOutline: Tags SCENARIO_OUTLINE_LINE . Description StepSeq ExampleList

    DECRIPTION  shift, and go to state 9

    $default  reduce using rule 7 (Description)

    Description  go to state 40


State 28

   13 Scenario_List: Scenario_List Basic_Scenario .

    $default  reduce using rule 13 (Scenario_List)


State 29

    2 Feature_Header: LanguageTag Tags FEATURE_LINE Description .

    $default  reduce using rule 2 (Feature_Header)


State 30

   25 StepParam: DOC_STRING .

    $default  reduce using rule 25 (StepParam)


State 31

   27 TableRows: TABLE_ROW .

    $default  reduce using rule 27 (TableRows)


State 32

   19 Step: GIVEN_STEP StepParam .

    $default  reduce using rule 19 (Step)


State 33

   26 StepParam: TableRows .
   28 TableRows: TableRows . TABLE_ROW

    TABLE_ROW  shift, and go to state 41

    $default  reduce using rule 26 (StepParam)


State 34

   20 Step: WHEN_STEP StepParam .

    $default  reduce using rule 20 (Step)


State 35

   21 Step: THEN_STEP StepParam .

    $default  reduce using rule 21 (Step)


State 36

   22 Step: AND_STEP StepParam .

    $default  reduce using rule 22 (Step)


State 37

   23 Step: BUT_STEP StepParam .

    $default  reduce using rule 23 (Step)


State 38

   18 StepSeq: StepSeq Step .

    $default  reduce using rule 18 (StepSeq)


State 39

   16 Scenario: Tags SCENARIO_LINE Description . StepSeq

    GIVEN_STEP  shift, and go to state 19
    WHEN_STEP   shift, and go to state 20
    THEN_STEP   shift, and go to state 21
    AND_STEP    shift, and go to state 22
    BUT_STEP    shift, and go to state 23

    StepSeq  go to state 42
    Step     go to state 25


State 40

   29 ScenarioOutline: Tags SCENARIO_OUTLINE_LINE Description . StepSeq ExampleList

    GIVEN_STEP  shift, and go to state 19
    WHEN_STEP   shift, and go to state 20
    THEN_STEP   shift, and go to state 21
    AND_STEP    shift, and go to state 22
    BUT_STEP    shift, and go to state 23

    StepSeq  go to state 43
    Step     go to state 25


State 41

   28 TableRows: TableRows TABLE_ROW .

    $default  reduce using rule 28 (TableRows)


State 42

   16 Scenario: Tags SCENARIO_LINE Description StepSeq .
   18 StepSeq: StepSeq . Step

    GIVEN_STEP  shift, and go to state 19
    WHEN_STEP   shift, and go to state 20
    THEN_STEP   shift, and go to state 21
    AND_STEP    shift, and go to state 22
    BUT_STEP    shift, and go to state 23

    $default  reduce using rule 16 (Scenario)

    Step  go to state 38


State 43

   18 StepSeq: StepSeq . Step
   29 ScenarioOutline: Tags SCENARIO_OUTLINE_LINE Description StepSeq . ExampleList

    EXAMPLE_LINE  shift, and go to state 44
    GIVEN_STEP    shift, and go to state 19
    WHEN_STEP     shift, and go to state 20
    THEN_STEP     shift, and go to state 21
    AND_STEP      shift, and go to state 22
    BUT_STEP      shift, and go to state 23

    Step         go to state 38
    ExampleList  go to state 45
    Example      go to state 46


State 44

   32 Example: EXAMPLE_LINE . TableRows

    TABLE_ROW  shift, and go to state 31

    TableRows  go to state 47


State 45

   29 ScenarioOutline: Tags SCENARIO_OUTLINE_LINE Description StepSeq ExampleList .
   31 ExampleList: ExampleList . Example

    EXAMPLE_LINE  shift, and go to state 44

    $default  reduce using rule 29 (ScenarioOutline)

    Example  go to state 48


State 46

   30 ExampleList: Example .

    $default  reduce using rule 30 (ExampleList)


State 47

   28 TableRows: TableRows . TABLE_ROW
   32 Example: EXAMPLE_LINE TableRows .

    TABLE_ROW  shift, and go to state 41

    $default  reduce using rule 32 (Example)


State 48

   31 ExampleList: ExampleList Example .

    $default  reduce using rule 31 (ExampleList)
